--- a/SmartContactManager/src/main/resources/templates/base.html
+++ b/SmartContactManager/src/main/resources/templates/base.html
@@ -1,14 +1,39 @@
-<div class="parent-fragment" th:fragment="parent(content)">
-    <h1>this is paren fragment</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo sunt vero officiis ut aperiam autem mollitia
-        placeat quis itaque ducimus non fugit in nihil, rerum, vel similique asperiores temporibus. Repellat!</p>
-    <div th:replace="${content}"></div>
-    
-    
-        <!-- <h1> Value of x is <span th:text="${x}"></span></h1>
-    <h1> Value of y is <span th:text="${y}"></span></h1> -->
-</div>
+<!DOCTYPE html>
+<html class="light" lang="en" th:fragment="parent(content,title,script)" xmlns="http://www.thymeleaf.org">
 
-<div th:fragment="test(content)">
-    <div th:replace="${content}"></div>
-</div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title data-th-replace="${title}">SCM</title>
+    <link rel="stylesheet" data-th-href="@{'/css/output.css'}" />
+    <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body class="bg-white dark:bg-black dark:text-white">
+
+    <!-- common header -->
+    <div data-th-replace="navbar :: navbar"></div>
+
+    <!-- Main content -->
+    <div class="p-4 x">
+        <section data-th-replace="${content}"></section>
+    </div>
+    <!-- flow bite content -->
+
+    <!-- common footer -->
+    <footer class="p-4">
+        Footer: Learn code with Yaten
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
+    <script data-th-src="@{/js/script.js}">
+
+    </script>
+    <th:block data-th-replace="${script}"></th:block>
+</body>
+
+</html>
