--- a/SmartContactManager/src/main/resources/templates/contact.html
+++ b/SmartContactManager/src/main/resources/templates/contact.html
@@ -2,13 +2,13 @@
 <html lang="en" th:replace="~{base :: parent(~{::#content},~{::title},~{::script})}">
 
 <head>
-    <title>About page</title>
+    <title>Home page</title>
 </head>
 
 <body>
     <div id="content">
 
-        <h1>Walcome to about page </h1>
+        <h1>Walcome to cantact page </h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas ducimus doloremque consectetur excepturi
             hic vero. Laborum maiores voluptates dolore dolores dicta ipsam, accusamus ratione ea amet rerum,
             voluptatibus enim aspernatur?</p>
@@ -16,10 +16,7 @@
     </div>
 </body>
 <script>
-    console.log("about page")
-</script>
-<script>
-    console.log("second about page")
+    console.log("contact page")
 </script>
 
 </html>
