--- a/SmartContactManager/src/main/resources/templates/services.html
+++ b/SmartContactManager/src/main/resources/templates/services.html
@@ -1,34 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" th:replace="~{base :: parent(~{::#content},~{::title},~{})}">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Services page</title>
 </head>
+
 <body>
-    <h1>This is services page</h1>
-     <!-- Using fragment -->
-     <div class="host-tag" th:replace="~{base :: parent(~{::.third-containt})}">
-        <section id="main-containt">
-            <h2>this is dynamic services pass to parent</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur fugit quod ab voluptatum cumque
-                ullam quis cupiditate modi accusantium deleniti dolorem officia, accusamus eligendi aliquam, doloribus
-                repellendus similique explicabo. Eaque.</p>
-        </section>
-        <section id="second-containt">
-            <h2>this is second dynamic services pass to parent</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur fugit quod ab voluptatum cumque
-                ullam quis cupiditate modi accusantium deleniti dolorem officia, accusamus eligendi aliquam, doloribus
-                repellendus similique explicabo. Eaque.</p>
-        </section>
 
-        <section class="third-containt">
-            <h2>this is third-containt dynamic services pass to parent</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur fugit quod ab voluptatum cumque
-                ullam quis cupiditate modi accusantium deleniti dolorem officia, accusamus eligendi aliquam, doloribus
-                repellendus similique explicabo. Eaque.</p>
-        </section>
+    <section id="content">
+        <h1>Walcome to Services</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores repudiandae ab enim ea voluptatibus
+            doloremque officia, labore a, architecto inventore nulla ex doloribus, voluptas veritatis laudantium! Est
+            numquam ab quam?</p>
 
-    </div>
+    </section>
+
 </body>
+<script>
+    console.log("service log page")
+</script>
+
 </html>
